--- a/config-server.yml
+++ b/config-server.yml
@@ -3,6 +3,8 @@ spring:
     active: dev
 
 ---
+server:
+  port: 8201
 spring:
   profiles: dev
   application:
@@ -15,6 +17,8 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
 ---
+server:
+  port: 8202
 spring:
   profiles: test
   application:
